@@ -1,18 +1,49 @@
-## Getting Started
+# Lord of Space
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+## Overview
+Lord of Space is a simple JavaFX-based space shooter game. Players control a spaceship, dodging enemies and shooting them down to earn points. The game features different types of spaceships, each with its own unique backstory.
+## How to Play
+- Use your mouse to move the spaceship horizontally.
+- Click to shoot at the enemy ships.
+- Avoid getting hit by enemy ships and meteroids
+- Destroy as many enemy ships as possible to increase your score.
 
-## Folder Structure
+## Features
+- Multiple enemy types 
+- Explosions and shooting effects
+- Score tracking and display
+- Simple controls
+- Animated background to give the player the feeling of actually flying through space
 
-The workspace contains two folders by default, where:
+## Installation
+To run Lord of Space, you will need Java and JavaFX installed on your machine.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+1. Clone or download the repository.
+2. Navigate to the project directory.
+3. Compile the game using `javac LordOfSpaceApp.java`.
+4. Run the game using ‘ java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web LordOfSpaceApp’
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+Replace `/path/to/javafx-sdk/lib` with the actual path to the JavaFX SDK library on your machine.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+##Spaceships
+The Starlight Voyager: Known for its dazzling maneuvers and leaving a trail of stardust.
+The Cosmic Defender: Carries the legacy of General Luna, ensuring peace and safety for star systems.
+The Nebula Striker: Shrouded in mystery, the vessel of choice for the Shadow Phantom
 
-## Dependency Management
+##Enemies
+The Zorgo Invaders: Relentless attackers from the Zorgon nebula, known for their swift strikes and aggressive tactics 
+Galactic Gorgons: Ruthless space pirates who plunder and sabotage unsuspecting ships, striking fear into the hearts of travelers
+Quantum Scavengers: Though small, are dangerous foes that pick apart ships and stations, repurposing technology for their evil plans
+Galactic Ghouls: A sinister species that feed on the energy of stars and planets, leaving behind a trail of cold, lifeless celestial bodies in their wake
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+## Controls
+- Move the spaceship: Move the mouse horizontally.
+- Shoot: Click the left mouse button.
+
+## Credits
+- Game development: Jaylen Terry
+- Graphics and assets: Made by Freepik from www.flaticon.com
+
+## License
+This project is licensed under the MIT License - see the LICENSE file for details.
+
